# lovesay.rs

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  rust-toolchain.toml
.example/: quotes
.github/workflows/: deploy.yml  release.yml
src/: main.rs  printers.rs
