[package]
name = "lovesay"
version = "1.0.2"
edition = "2024"
description = "lovesay but rusty"
homepage = "https://github.com/dotzenith/lovesay.rs"
repository = "https://github.com/dotzenith/lovesay.rs"
license = "MIT"

[dependencies]
shellexpand = "3.0"
chrono = "0.4.26"
textwrap = "0.16.0"
term_size = "0.3.2"
kolorz = "0.10.0"
clap = { version = "4.4.9", features = ["cargo"] }
colored = "2.1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
